--- a/site/static/login.css
+++ b/site/static/login.css
@@ -8,7 +8,8 @@
 .login-form {
   background-color: var(--primary-color);
   border-radius: 0.25rem;
-  padding: 2rem;
+  margin: 1rem;
+  padding: 1rem;
 }
 
 .login-form input {
@@ -30,4 +31,13 @@
   cursor: pointer;
   display: block;
   width: 100%;
+}
+
+@media screen and (min-width: 600px) {
+  .login-form {
+    padding: 2rem;
+  }
+
+  .login-form input {
+  }
 }
