--- a/site/static/login.css
+++ b/site/static/login.css
@@ -12,14 +12,22 @@
   padding: 1rem;
 }
 
+.login-form .field {
+  margin: 1rem 0;
+}
+
+.login-form .field label {
+  font-weight: bold;
+}
+
 .login-form input {
   border: none;
   background-color: var(--background-color);
   border-radius: 0.25rem;
   display: block;
   font-size: 1.5rem;
+  margin: 0.25rem 0;
   padding: 0.5rem 1rem;
-  margin: 1rem 0;
 }
 
 .login-form input[type="submit"] {
